be/src/runtime/buffered-block-mgr.cc
@@ -548,6 +548,7 @@ Status BufferedBlockMgr::PinBlock(Block* block, bool* pinned, Block* release_blo
       block->is_pinned_ = true;
       *pinned = true;
       block->client_->PinBuffer(block->buffer_desc_);
+      ++total_pinned_buffers_;
       RETURN_IF_ERROR(WriteUnpinnedBlocks());
       return DeleteOrUnpin(release_block, unpin);
     }
